language/move-lang/tests/move_check/expansion/use_inner_scope_unbound.move
address 0x1 {
module M {
    struct S1 { b: bool }
    struct S2 { u: u64 }
    fun check(): bool {
        false
    }
    fun num(): u64 {
        0
    }

    fun t() {
        use 0x1::N;
        use 0x1::M::foo;

    }
}
}
